Fix icon not showing

--- a/resources/css/bootstrap.css
+++ b/resources/css/bootstrap.css
@@ -4592,11 +4592,11 @@ a.close.disabled {
 
 @font-face {
     font-family: 'themify';
-    src: url('../fonts/themify9f24.eot?-fvbane');
-    src: url('../fonts/themifyd41d.eot?#iefix-fvbane') format('embedded-opentype'),
-        url('../fonts/themify9f24.woff?-fvbane') format('woff'),
-        url('../fonts/themify9f24.ttf?-fvbane') format('truetype'),
-        url('../fonts/themify9f24.svg?-fvbane#themify') format('svg');
+    src: url('../fonts/themify9f24.eot');
+    src: url('../fonts/themifyd41d.eot') format('embedded-opentype'),
+        url('../fonts/themify9f24.woff') format('woff'),
+        url('../fonts/themify9f24.ttf') format('truetype'),
+        url('../fonts/themify9f24.svg') format('svg');
     font-weight: normal;
     font-style: normal;
 }
